--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.mjs",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon ./app.mjs"
+    "start": "node ./server.mjs",
+    "dev": "node ./watch.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "chokidar": "^3.5.3",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-next": "^0.0.2",
     "mockjs": "^1.1.0",
     "nodemon": "^3.0.1"
